# enum-extension

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  python-publish.yml
enum_extensions/: __init__.py  enum.py  exceptions.py
tests/: factories.py  tests.py
